# voca

./: .ankiconnect_config  .gitignore  README.md  anki_connector.py  llm.py  main.py  prompt.md  pyproject.toml  workflow.py
src/voca/: .ankiconnect_config  anki_connector.py  cli.py  llm.py  prompt.md  web.py  workflow.py
src/voca/static/: index.html
